--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,8 @@ deploy:
   github_token: $GH_TOKEN
   local_dir: dist/cv
   repo: mmaelicke/mmaelicke.github.io
-  branch: master
+  target-branch: master
+  name: Mirko Mälicke
+  email: mirko@maelicke-online.de
   on:
     branch: master
